--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,11 @@ name: Test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths-ignore:
         - 'docs/**'
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths-ignore:
         - 'docs/**'
 
