Fix isort linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ line_length = 79
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
 default_section = "THIRDPARTY"
 known_first_party = "fliswarm"
-known_sdss_party = ["sdsstools"]
+known_sdss = ["sdsstools"]
 balanced_wrapping = true
 include_trailing_comma = false
 lines_after_imports = 2
