--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Lint with isort
       run: |
-        poetry run isort -c python/
+        poetry run isort -c fliswarm
 
     - name: Test with pytest
       run: |
