--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,6 +58,8 @@ jobs:
     - name: Test with pytest
       run: |
         poetry run pytest
+      env:
+        OBSERVATORY: APO
 
     - name: Upload coverage to Codecov
       if: matrix.python-version == '3.8'
