--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ docker = "^4.3.1"
 sdss-clu = "^0.5.2"
 click-default-group = "^1.2.2"
 daemonocle = "^1.0.2"
+sphinx-click = {version="^2.3.0", optional=true}
 
 [tool.poetry.dev-dependencies]
 ipython = ">=7.11.0"
@@ -53,6 +54,10 @@ ipdb = ">=0.12.3"
 rstcheck = "^3.3.1"
 Sphinx = "^3.0.0"
 autopep8 = "^1.5.4"
+sphinx-click = "^2.3.0"
+
+[tool.poetry.extras]
+docs = ["sphinx-click"]
 
 [tool.isort]
 line_length = 79
