--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ sdss-clu = "^0.5.2"
 click-default-group = "^1.2.2"
 daemonocle = "^1.0.2"
 sphinx-click = {version="^2.3.0", optional=true}
+sphinx-copybutton = {version="^0.3.1", optional=true}
 
 [tool.poetry.dev-dependencies]
 ipython = ">=7.11.0"
@@ -55,9 +56,10 @@ rstcheck = "^3.3.1"
 Sphinx = "^3.0.0"
 autopep8 = "^1.5.4"
 sphinx-click = "^2.3.0"
+sphinx-copybutton = "^0.3.1"
 
 [tool.poetry.extras]
-docs = ["sphinx-click"]
+docs = ["sphinx-click", "sphinx-copybutton"]
 
 [tool.isort]
 line_length = 79
