--- a/fliswarm/etc/fliswarm.yaml
+++ b/fliswarm/etc/fliswarm.yaml
@@ -8,7 +8,7 @@ actor:
 
 registry: sdss-hub:5000
 
-image: sdss5/flicamera:latest
+image: flicamera:latest
 container_name: flicamera
 
 ping_timeout: 0.1
