--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ Sphinx = "^4.0.0"
 autopep8 = "^1.5.4"
 sphinx-click = "^3.0.0"
 sphinx-copybutton = "^0.3.1"
-black = {version = "^20.8b1", allow-prereleases = true}
+black = {version = ">=21.0", allow-prereleases = true}
 
 [tool.black]
 line-length = 88
