--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,12 +50,12 @@ isort = ">=4.3.21"
 codecov = ">=2.0.15"
 coverage = {version = ">=5.0", extras = ["toml"]}
 ipdb = ">=0.12.3"
-rstcheck = "^3.3.1"
-Sphinx = "^4.0.0"
-autopep8 = "^1.5.4"
-sphinx-click = "^3.0.0"
-sphinx-copybutton = "^0.3.1"
-black = {version = "^20.8b1", allow-prereleases = true}
+rstcheck = ">=3.3.1"
+Sphinx = ">=3.0.0"
+autopep8 = ">=1.5.4"
+sphinx-click = ">=3.0.0"
+sphinx-copybutton = ">=0.3.1"
+black = {version = ">=21.0", allow-prereleases = true}
 
 [tool.black]
 line-length = 88
