--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ autopep8 = ">=1.5.4"
 sphinx-click = ">=3.0.0"
 sphinx-copybutton = ">=0.3.1"
 black = {version = ">=21.0", allow-prereleases = true}
+myst-parser = "^0.14.0"
 
 [tool.black]
 line-length = 88
