--- a/fliswarm/etc/fliswarm.yaml
+++ b/fliswarm/etc/fliswarm.yaml
@@ -15,7 +15,7 @@ ping_timeout: 0.6
 
 reboot_command: sudo reboot
 
-enabled_nodes: [gfa3]
+enabled_nodes: [gfa1, gfa2, gfa3, gfa4, gfa5, gfa6, fvc]
 
 nodes:
     gfa1:
