--- a/fliswarm/etc/fliswarm.yaml
+++ b/fliswarm/etc/fliswarm.yaml
@@ -2,7 +2,7 @@ actor:
   name: fliswarm
   host: 0.0.0.0
   port: 19996
-  tron_host: sdss-hub
+  tron_host: sdss5-hub
   tron_port: 6093
   log_dir: /data/logs/actors/fliswarm
   additional_properties: True
