--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ click-default-group = "^1.2.2"
 daemonocle = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
-ipython = ">=7.11.0"
+ipython = ">=8.0.0rc1"
 matplotlib = ">=3.1.1"
 flake8 = ">=3.7.9"
 doc8 = ">=0.8.0"
