--- a/fliswarm/etc/fliswarm.yaml
+++ b/fliswarm/etc/fliswarm.yaml
@@ -18,9 +18,67 @@ reboot_command: sudo reboot
 
 enabled_nodes:
   APO: [gfa2, gfa3, gfa4, gfa5, fvc]
+  LCO: [gfa1, gfa2, gfa3, gfa4, gfa5, gfa6, fvc]
 
 nodes:
   APO:
+    gfa1:
+      user: sdss
+      host: sdss-gfa1
+      port: 19995
+      docker-client: tcp://sdss-gfa1:2375
+      category: gfa
+      power:
+        device: nuc1
+    gfa2:
+      user: sdss
+      host: sdss-gfa2
+      port: 19995
+      docker-client: tcp://sdss-gfa2:2375
+      category: gfa
+      power:
+        device: nuc2
+    gfa3:
+      user: sdss
+      host: sdss-gfa3
+      port: 19995
+      docker-client: tcp://sdss-gfa3:2375
+      category: gfa
+      power:
+        device: nuc3
+    gfa4:
+      user: sdss
+      host: sdss-gfa4
+      port: 19995
+      docker-client: tcp://sdss-gfa4:2375
+      category: gfa
+      power:
+        device: nuc4
+    gfa5:
+      user: sdss
+      host: sdss-gfa5
+      port: 19995
+      docker-client: tcp://sdss-gfa5:2375
+      category: gfa
+      power:
+        device: nuc5
+    gfa6:
+      user: sdss
+      host: sdss-gfa6
+      port: 19995
+      docker-client: tcp://sdss-gfa6:2375
+      category: gfa
+      power:
+        device: gfa6
+    fvc:
+      user: sdss
+      host: sdss-fvc
+      port: 19995
+      docker-client: tcp://sdss-fvc:2375
+      category: fvc
+      power:
+        device: fvc
+  LCO:
     gfa1:
       user: sdss
       host: sdss-gfa1
@@ -95,5 +153,5 @@ volumes:
     driver: local
     opts:
       type: nfs
-      o: addr=10.25.1.230,rw,nolock,hard,nointr,nfsvers=3
+      o: addr=sdss-data,rw,nolock,hard,nointr,nfsvers=3
       device: :/data
