--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,68 +1,70 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths-ignore:
-        - 'docs/**'
+      - 'docs/**'
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths-ignore:
-        - 'docs/**'
+      - 'docs/**'
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
+      - uses: actions/checkout@v2
 
-    - uses: actions/checkout@v2
-
-    - name: Cache Setup
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
+      - name: Cache Setup
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
             ${{ runner.os }}-pip-
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade pip setuptools wheel
+          pip install .
 
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 . --count --show-source --statistics
+      - name: Lint with flake8
+        run: |
+          pip install flake8
+          flake8 . --count --show-source --statistics
 
-    - name: Lint with isort
-      run: |
-        poetry run isort -c fliswarm
+      - name: Lint with isort
+        run: |
+          pip install isort
+          isort -c fliswarm
 
-    - name: Test with pytest
-      run: |
-        poetry run pytest
-      env:
-        OBSERVATORY: APO
+      - name: Lint with black
+        run: |
+          pip install black
+          black --check fliswarm/
+          black --check tests/
 
-    - name: Upload coverage to Codecov
-      if: matrix.python-version == '3.8'
-      uses: codecov/codecov-action@v1
-      with:
-        file: ./coverage.xml
+      - name: Test with pytest
+        run: |
+          pip install pytest pytest-mock pytest-asyncio pytest-cov
+          pytest
+        env:
+          OBSERVATORY: APO
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
