--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,7 @@ click-default-group = "^1.2.2"
 daemonocle = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
-ipython = ">=8.0.0rc1"
-matplotlib = ">=3.1.1"
+ipython = ">=8.0.0"
 flake8 = ">=3.7.9"
 doc8 = ">=0.8.0"
 pytest = ">=5.2.2"
@@ -64,7 +63,7 @@ furo = ">=2021.9.22"
 
 [tool.black]
 line-length = 88
-target-version = ['py38']
+target-version = ['py39']
 fast = true
 
 [tool.isort]
@@ -95,5 +94,5 @@ exclude_lines = [
 ]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.1.0b2"]
 build-backend = "poetry.core.masonry.api"
