--- a/fliswarm/etc/fliswarm.yaml
+++ b/fliswarm/etc/fliswarm.yaml
@@ -153,5 +153,5 @@ volumes:
     driver: local
     opts:
       type: nfs
-      o: addr=sdss-data,rw,nolock,hard,nointr,nfsvers=4
+      o: addr=sdss-hub,rw,nolock,hard,nointr,nfsvers=4
       device: :/data
