--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sdss-fliswarm"
-version = "0.4.0"
+version = "0.4.1a0"
 description = "A tool to create and manage Docker instances of flicamera"
 authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
 license = "BSD-3-Clause"
@@ -77,6 +77,7 @@ lines_after_imports = 2
 
 [tool.pytest.ini_options]
 addopts = "--cov fliswarm --cov-report xml --cov-report html --cov-report term"
+asyncio_mode = "auto"
 filterwarnings = [
     "ignore:starting LegacyActor without Tron connection."
 ]
