--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,46 +1,48 @@
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+      - '*'
 
 name: Create Release
 
 jobs:
   build:
+    name: Build wheels
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: ['3.12']
+
+    permissions:
+      contents: write
+      id-token: write
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create release
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: fliswarm ${{ github.ref }}
-          body:
-          draft: false
-          prerelease: false
+          name: fliswarm ${{ github.ref_name }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pep517
+          python -m pip install --upgrade pip setuptools wheel build
 
-      - name: Build package
+      - name: Build wheels
         run: |
-          python -m pep517.build --source --binary --out-dir dist/ .
+          pyproject-build -w
 
-      - name: Publish to PyPI
+      - name: Build source
+        run: |
+          pyproject-build -s
+
+      - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.pypi_password }}
