--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,52 +17,39 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Cache Setup
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade pip setuptools wheel
+          pip install --upgrade wheel pip setuptools
           pip install .
 
-      - name: Lint with flake8
+      - name: Lint with ruff
         run: |
-          pip install flake8
-          flake8 . --count --show-source --statistics
-
-      - name: Lint with isort
-        run: |
-          pip install isort
-          isort -c fliswarm
+          pip install ruff
+          ruff check fliswarm/
 
       - name: Lint with black
         run: |
           pip install black
           black --check fliswarm/
-          black --check tests/
 
-      - name: Test with pytest
-        run: |
-          pip install pytest pytest-mock pytest-asyncio pytest-cov
-          pytest
-        env:
-          OBSERVATORY: APO
+      # - name: Test with pytest
+      #   run: |
+      #     pip install pytest pytest-mock pytest-asyncio pytest-cov pytest-httpx
+      #     pytest
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          file: ./coverage.xml
+      # - name: Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v3
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     file: ./coverage.xml
