--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,6 @@ pytest-cov = ">=2.8.1"
 pytest-mock = ">=1.13.0"
 pytest-sugar = ">=0.9.2"
 isort = ">=4.3.21"
-codecov = ">=2.0.15"
 coverage = {version = ">=5.0", extras = ["toml"]}
 ipdb = ">=0.12.3"
 rstcheck = ">=3.3.1"
@@ -60,20 +59,31 @@ nox = ">=2021.6.12"
 sphinx-autobuild = ">=2021.3.14"
 sphinx-jsonschema = ">=1.16.11"
 furo = ">=2021.9.22"
+ruff = ">=0.1.0"
 
 [tool.black]
 line-length = 88
 target-version = ['py39']
 fast = true
 
-[tool.isort]
-profile = "black"
-sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
-default_section = "THIRDPARTY"
-known_first_party = "fliswarm"
-known_typing = ["typing"]
-known_sdss = ["sdsstools", "clu", "basecam", "flicamera"]
-lines_after_imports = 2
+[tool.ruff]
+line-length = 88
+target-version = 'py311'
+select = ["E", "F", "I"]
+unfixable = ["F841"]
+exclude = ["**/_vendor"]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["F401", "F403", "E402"]
+
+[tool.ruff.isort]
+known-first-party = ["fliswarm"]
+lines-after-imports = 2
+section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]
+
+[tool.ruff.isort.sections]
+typing = ["typing"]
+sdss = ["sdsstools", "clu", "basecam", "flicamera"]
 
 [tool.pytest.ini_options]
 addopts = "--cov fliswarm --cov-report xml --cov-report html --cov-report term"
