--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,87 +1,70 @@
-[tool.poetry]
+[project]
 name = "sdss-fliswarm"
 version = "0.5.1a0"
 description = "A tool to create and manage Docker instances of flicamera"
-authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
+authors = [
+    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
+]
 license = "BSD-3-Clause"
 readme = "README.md"
 homepage = "https://github.com/sdss/fliswarm"
 repository = "https://github.com/sdss/fliswarm"
 documentation = "https://sdss-fliswarm.readthedocs.org"
-keywords = ["astronomy", "software"]
-classifiers = [
-    "Intended Audience :: Science/Research",
-    "Natural Language :: English",
-    "Operating System :: OS Independent",
-	"Programming Language :: Python :: 3.7",
-	"Programming Language :: Python :: 3.8",
-	"Programming Language :: Python :: 3.9",
-    "Topic :: Documentation :: Sphinx",
-    "Topic :: Software Development :: Libraries :: Python Modules"
-]
-packages = [
-    { include = "fliswarm" }
-]
-include = ["fliswarm/etc/*"]
 
-[tool.poetry.scripts]
+requires-python = ">=3.10,<4"
+
+dependencies = [
+"sdsstools>=1.9.1",
+"click>=8.0.0,<8.2.0",
+"docker>=5.0.0",
+"sdss-clu>=2.0.0",
+"click-default-group>=1.2.2",
+]
+
+[project.scripts]
 fliswarm = "fliswarm.__main__:main"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-sdsstools = ">=0.4.0"
-click = "^8.0.0"
-docker = "^5.0.0"
-sdss-clu = "^1.0.0"
-click-default-group = "^1.2.2"
-daemonocle = "^1.0.2"
-
-[tool.poetry.dev-dependencies]
-ipython = ">=8.0.0"
-flake8 = ">=3.7.9"
-doc8 = ">=0.8.0"
-pytest = ">=5.2.2"
-pytest-asyncio = ">=0.10.0"
-pytest-cov = ">=2.8.1"
-pytest-mock = ">=1.13.0"
-pytest-sugar = ">=0.9.2"
-isort = ">=4.3.21"
-coverage = {version = ">=5.0", extras = ["toml"]}
-ipdb = ">=0.12.3"
-rstcheck = ">=3.3.1"
-Sphinx = ">=3.0.0"
-autopep8 = ">=1.5.4"
-sphinx-click = ">=3.0.0"
-sphinx-copybutton = ">=0.3.1"
-black = ">=21.0"
-myst-parser = ">=0.14.0"
-nox = ">=2021.6.12"
-sphinx-autobuild = ">=2021.3.14"
-sphinx-jsonschema = ">=1.16.11"
-furo = ">=2021.9.22"
-ruff = ">=0.1.0"
-
-[tool.black]
-line-length = 88
-target-version = ['py312']
-fast = true
+[dependency-groups]
+dev = [
+    "ipython>=8.0.0",
+    "pytest>=5.2.2",
+    "pytest-asyncio>=0.10.0",
+    "pytest-cov>=2.8.1",
+    "pytest-mock>=1.13.0",
+    "pytest-sugar>=0.9.2",
+    "coverage[toml]>=5.0",
+    "ipdb>=0.12.3",
+    "rstcheck>=3.3.1",
+    "Sphinx>=8.0.0",
+    "autopep8>=1.5.4",
+    "sphinx-rtd-theme>=0.5.0",
+    "sphinx-click>=6.0.0",
+    "sphinx-copybutton>=0.3.1",
+    "myst-parser>=0.14.0",
+    "nox>=2021.6.12",
+    "sphinx-autobuild>=2021.3.14",
+    "sphinx-jsonschema>=1.16.11",
+    "furo>=2025.7.19",
+    "ruff>=0.12.5"
+]
 
 [tool.ruff]
 line-length = 88
 target-version = 'py312'
+
+[tool.ruff.lint]
 select = ["E", "F", "I"]
 unfixable = ["F841"]
-exclude = ["**/_vendor"]
 
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401", "F403", "E402"]
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F403", "E402", "F401"]
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["fliswarm"]
 lines-after-imports = 2
 section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]
 
-[tool.ruff.isort.sections]
+[tool.ruff.lint.isort.sections]
 typing = ["typing"]
 sdss = ["sdsstools", "clu", "basecam", "flicamera"]
 
@@ -105,5 +88,9 @@ exclude_lines = [
 ]
 
 [build-system]
-requires = ["poetry-core>=1.1.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["uv_build>=0.8.3,<0.9.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-root = ""
+module-name = "fliswarm"
