--- a/docs/sphinx/requirements.txt
+++ b/docs/sphinx/requirements.txt
@@ -1,6 +1,6 @@
-sphinx>=4.0
-sphinx-click>=2.6.0
+sphinx>=8.0
+sphinx-click>=6.0.0
 sphinx-jsonschema>=1.16.7
 myst-parser>=0.15.0
-furo>=2021.6.18-beta.36
+furo>=2025.7.19
 sphinx-copybutton>=0.3.3
