--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,39 +17,32 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
 
       - name: Install dependencies
         run: |
-          pip install --upgrade wheel pip setuptools
-          pip install .
+          uv sync --no-dev --frozen
 
-      - name: Lint with ruff
+      - name: Test with pytest
         run: |
-          pip install ruff
-          ruff check fliswarm/
-
-      - name: Lint with black
-        run: |
-          pip install black
-          black --check fliswarm/
-
-      # - name: Test with pytest
-      #   run: |
-      #     pip install pytest pytest-mock pytest-asyncio pytest-cov pytest-httpx
-      #     pytest
+          uv pip install pytest pytest-mock pytest-asyncio pytest-cov
+          uv run pytest
 
       # - name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v3
+      #   uses: codecov/codecov-action@v5
       #   with:
       #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     file: ./coverage.xml
+      #     files: ./coverage.xml
