Set $OBERVATORY to APO in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,11 @@ on:
       - 'docs/**'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+
+    env:
+      OBSERVATORY: APO
 
     strategy:
       fail-fast: false
