--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -5,6 +5,9 @@ build:
   tools:
     python: '3.12'
 
+sphinx:
+  configuration: docs/sphinx/conf.py
+
 python:
   install:
     - requirements: docs/sphinx/requirements.txt
