--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,12 @@ documentation = "https://sdss-fliswarm.readthedocs.org"
 requires-python = ">=3.10,<4"
 
 dependencies = [
-"sdsstools>=1.9.1",
-"click>=8.0.0,<8.2.0",
-"docker>=5.0.0",
-"sdss-clu>=2.0.0",
-"click-default-group>=1.2.2",
+    "sdsstools>=1.9.1",
+    "click>=8.0.0,<8.2.0",
+    "docker>=5.0.0",
+    "sdss-clu>=2.0.0",
+    "click-default-group>=1.2.2",
+    "numpy<2.0.0"
 ]
 
 [project.scripts]
