--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sdss-fliswarm"
-version = "0.6.1a1"
+version = "0.6.1"
 description = "A tool to create and manage Docker instances of flicamera"
 authors = [
     { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
